--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
     "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-wallets": "^0.15.4",
     "@solana/web3.js": "^1.31.0",
